--- a/.air.toml
+++ b/.air.toml
@@ -7,8 +7,8 @@ tmp_dir = "tmp"
   bin = "./tmp/main"
   cmd = "go build -o ./tmp/main ."
   delay = 1000
-  exclude_dir = ["assets", "tmp", "vendor", "testdata"]
-  exclude_file = ["README.md"]
+  exclude_dir = ["assets", "tmp", "vendor", "testdata", "node_modules"]
+  exclude_file = ["README.md", "package.json", "package-lock.json"]
   exclude_regex = ["_test.go"]
   exclude_unchanged = true
   follow_symlink = false
